force-app/main/default/objects/Free_Text__c/Free_Text__c.object-meta.xml
<CustomObject>
    <description>A free text section to record information that cannot be recorded elsewhere.</description>
    <label>Free Text</label>
    <nameField>
        <displayFormat>FT-{00000000}</displayFormat>
        <label>Free Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Free Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>