force-app/main/default/objects/Free_Text__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>ASG Special Notes</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Aunt or Uncle</fullName>
            </value>
            <value>
                <fullName>Business Awards &amp; Honors</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Client - Accountant</fullName>
            </value>
            <value>
                <fullName>Client - Attorney</fullName>
            </value>
            <value>
                <fullName>Client - Financial Planner</fullName>
            </value>
            <value>
                <fullName>Client - Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Client - Other</fullName>
            </value>
            <value>
                <fullName>Client - Trust Officer</fullName>
            </value>
            <value>
                <fullName>Companion</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Current Spouse</fullName>
            </value>
            <value>
                <fullName>Deceased Spouse</fullName>
            </value>
            <value>
                <fullName>Deceased Spouse or Partner</fullName>
            </value>
            <value>
                <fullName>Degrees from other Universities</fullName>
            </value>
            <value>
                <fullName>Executor</fullName>
            </value>
            <value>
                <fullName>Financial Planner</fullName>
            </value>
            <value>
                <fullName>Former Spouse</fullName>
            </value>
            <value>
                <fullName>Former Spouse or Partner</fullName>
            </value>
            <value>
                <fullName>Foundation/Boards</fullName>
            </value>
            <value>
                <fullName>Funds Held in Trust Donor</fullName>
            </value>
            <value>
                <fullName>Funds Held in Trust Income Recipient</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Influenced ISU Student/Peer</fullName>
            </value>
            <value>
                <fullName>Influential ISU Professor/Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>