force-app/main/default/objects/Free_Text__c/fields/Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Free_Text__c</fullName>
    <label>Free Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>