force-app/main/default/objects/Free_Text__c/fields/Free_text_num__c.field-meta.xml
<CustomField>
    <fullName>Free_text_num__c</fullName>
    <externalId>true</externalId>
    <label>Free_text_num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>