force-app/main/default/objects/Free_Text__c/fields/FreeTextRelation_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>FreeTextRelation_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>