force-app/main/default/objects/Free_Text__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Start typing to select values that appear.</description>
    <label>ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Free Texts</relationshipLabel>
    <relationshipName>Free_Texts</relationshipName>
    <type>Lookup</type>
</CustomField>