force-app/main/default/objects/Free_Text__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Free Texts</relationshipLabel>
    <relationshipName>Free_Texts</relationshipName>
    <type>Lookup</type>
</CustomField>