force-app/main/default/objects/Free_Text__c/recordTypes/Annual_Giving.recordType-meta.xml
<RecordType>
    <fullName>Annual_Giving</fullName>
    <active>true</active>
    <label>Annual Giving</label>
</RecordType>