force-app/main/default/objects/Free_Text__c/recordTypes/Donor_Stewardship.recordType-meta.xml
<RecordType>
    <fullName>Donor_Stewardship</fullName>
    <active>true</active>
    <label>Donor Stewardship</label>
</RecordType>