force-app/main/default/objects/Free_Text__c/recordTypes/Information_Management.recordType-meta.xml
<RecordType>
    <fullName>Information_Management</fullName>
    <active>true</active>
    <label>Information Management</label>
</RecordType>