force-app/main/default/objects/Free_Text__c/recordTypes/Research_Free_Text.recordType-meta.xml
<RecordType>
    <fullName>Research_Free_Text</fullName>
    <active>true</active>
    <description>Shows Research page layout</description>
    <label>Research Free Text</label>
</RecordType>